www/src/home.module.scss
.container {
    padding: 0 1em;
    margin: 0 auto;
    width: 100%;
    max-width: 52em;
    a {
        text-decoration: underline;
    }
    h2 {
        text-align: center;
    }
    p {
        margin: 0.5em 0;
        line-height: 1.3;
    }
    ul {
        li {
            padding-bottom: 0.3em;
        }
    }
}

.index {
    min-height: 100vh;
    padding: 2rem 0;
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.title {
    font-size: 3em;
    margin-top: 0.4em;
    margin-bottom: 0.3em;
    text-align: center;
}

.plot-container {
    width: 100%;
    hr {
        border: none;
        border-top: 1px solid var(--border-primary, #444);
        margin: 1.5em 0;
    }
    // On mobile, Plotly charts extend 8px into the 16px page padding on each side
    // Title, descriptions, etc. stay within normal container bounds
    @media (max-width: 600px) {
        // PlotWrapper components (used by Plot component)
        :global(.plot-wrapper) {
            margin-left: -0.5em;
            margin-right: -0.5em;
            width: calc(100% + 1em);
        }
        // Direct Plotly usage (CrashPlot) - only when NOT inside .plot-wrapper
        > div > :global(.js-plotly-plot) {
            margin-left: -0.5em;
            margin-right: -0.5em;
            width: calc(100% + 1em);
        }
    }
}

.subtitle {
    text-align: center;
    color: var(--text-secondary);
    margin-top: -0.3em;
    margin-bottom: 0.5em;
}

.map {
    width: 100%;
    aspect-ratio: 1/1;
    min-height: 10em;
}

.bold {
    font-weight: bold;
}

.ytdFooter {
    margin: 0.4em 0;
    p {
        //margin: 0;
        margin-top: 0.2em;
    }
}

